--- a/.github/workflows/publish-github-package.yml
+++ b/.github/workflows/publish-github-package.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Publish
       run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        NODE_AUTH_TOKEN: ${{secrets.PUBLISH_TOKEN}}
