--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -1,22 +1,21 @@
-name: Publish to GitHub Packages
+name: Publish to npm
 
 on:
   release:
     types: [created]
 
 jobs:
-  build-and-publish:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-    - name: Setup Node.js
+    - name: Use Node.js
       uses: actions/setup-node@v2
       with:
         node-version: '16'
-        registry-url: 'https://npm.pkg.github.com'
+        registry-url: 'https://registry.npmjs.org'
 
     - name: Install dependencies
       run: npm ci
@@ -27,4 +26,4 @@ jobs:
     - name: Publish
       run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{secrets.PUBLISH_TOKEN}}
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
