Fix on the process that copies files from template folder
- minor improvement on console outputs
- fix on the order of the installation and configuration of git and
  husky

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "rm -rf dist && tsc && cp -rv ./template dist/",
     "start": "ts-node src/index.ts"
   },
   "bin": {
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^5.0.1",
-    "asciiart-logo": "^0.2.7"
+    "asciiart-logo": "^0.2.7",
+    "chalk": "^4.1.2"
   }
 }
