--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "outDir": "./dist",
     "strict": true,
-    "typeRoots": ["./node_modules/@types", "./src/"],
+    "typeRoots": ["./node_modules/@types", "./src/**/*.d.ts"],
     "skipLibCheck": true
   },
   "include": [
@@ -12,6 +12,7 @@
     "./src/**/*.d.ts",
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "template"
   ]
 }
